# Paradigm_ResearchHackathon

./: README.md
AttentionKernel/: README.md
PropAMM/: 00_reference_strategy.rs  00_starter.rs  01_v1_single_profile_adaptive.rs  02_v2_directional_size_k.rs  03_v3_exact_p0_profile.rs  04a_v4a_elapsed_cap_5.rs  04b_v4b_regime_blend.rs  05_v5_calm_rebate.rs  06_v6_flat_discount.rs  08_v8_aggressive_switching.rs  09_v9_inventory_tracking_wip.rs  10a_higher_counter_rebate.rs  10b_lower_base_fee.rs  10c_faster_floor_decay.rs  10d_higher_arb_defense.rs  11_v11_per_profile_fee_floors.rs  12_v12_two_profiles_no_p2.rs  13_v13_flow_adaptive_decay.rs  Cargo.toml  LEARNINGS.md  README.md  confusion_log.md  confusion_streamlining_proposals.md  lvr_sweep_output.txt  submission.rs  sweep_ARB10000_CTR3000.rs  sweep_ARB5200_CTR1000_BASE12.rs  sweep_ARB5200_CTR1500.rs  sweep_ARB8000_CTR2000.rs
PropAMM/crates/cli/: Cargo.toml
PropAMM/crates/cli/src/: main.rs  output.rs
PropAMM/crates/cli/src/commands/: build.rs  compile.rs  mod.rs  run.rs  validate.rs
PropAMM/crates/executor/: Cargo.toml
PropAMM/crates/executor/src/: lib.rs  loader.rs  native.rs  syscalls.rs  vm.rs
PropAMM/crates/shared/: Cargo.toml
PropAMM/crates/shared/src/: config.rs  instruction.rs  lib.rs  nano.rs  normalizer.rs  result.rs
PropAMM/crates/sim/: Cargo.toml
PropAMM/crates/sim/examples/: native_bench.rs  profile.rs
PropAMM/crates/sim/src/: amm.rs  arbitrageur.rs  bench.rs  curve_checks.rs  engine.rs  lib.rs  price_process.rs  retail.rs  router.rs  runner.rs  search_stats.rs
PropAMM/crates/sim/tests/: integration.rs
PropAMM/crates/submission-sdk/: Cargo.toml
PropAMM/crates/submission-sdk/src/: lib.rs
PropAMM/programs/normalizer/: Cargo.toml
PropAMM/programs/normalizer/src/: lib.rs
PropAMM/programs/starter/: Cargo.toml
PropAMM/python/: analyze_frontrun.py  arb_model.py  coarse_sweep_cntema.py  coarse_sweep_switching.py  normalizer_model.py
(+95 files in other folders)
