[package]
name = "starter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = "0.7"
wincode = { version = "0.4", default-features = false, features = ["derive"] }
prop-amm-submission-sdk = { path = "../../crates/submission-sdk" }

[features]
no-entrypoint = []
